[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
itertools = "*"


[[bin]]
name="day07_01"
path="bin/day07/solution_1.rs"

[[bin]]
name="day04_02"
path="bin/day04/solution_2.rs"