[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
itertools = "*"
nalgebra="*"


[[bin]]
name="day14_01"
path="bin/day14/solution_1.rs"

[[bin]]
name="day14_02"
path="bin/day14/solution_2.rs"